cleanup small changes

--- a/_config.yml
+++ b/_config.yml
@@ -21,38 +21,15 @@
 # Build settings
 remote_theme: mmistakes/minimal-mistakes
 minimal_mistakes_skin: default
-plugins:
-  # - jekyll-remote-theme
-  - jekyll-sitemap
-  - jekyll-seo-tag
-  - jekyll-paginate
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-include-cache
 
-# sass:
-#   sass_dir: assets/css
-#   style: compact
 
-# ==================================================== INFORMATION ====================================================
-name: Dominik Muhle
-email: dominik.muhle@tum.de
-description: >- # this means to ignore newlines until "baseurl:"
-  I am a PhD student at the Computer Vision Group at TU Munich under the guidance of Prof. Cremers. This is an overview over projects I was personally involved in. Check out more awesome work from our group at https://cvg.cit.tum.de/publications
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: dominikmuhle
-github_username:  dominikmuhle
-
+include:
+  - _pages
+  - _publications
+  
 # Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
 exclude:
   - old/
   - .sass-cache/
@@ -65,6 +42,17 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+
+plugins:
+  # - jekyll-remote-theme
+  - jekyll-sitemap
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+
 
 
 author:
@@ -89,10 +77,6 @@ author:
     - label: "GitHub"
       icon: "fa-brands fa-fw fa-github"
       url: "https://github.com/dominikmuhle"
-
-include:
-  - _pages
-  - _publications
 
 # ==================================================== COLLECTIONS ====================================================
 collections:
