--- a/_data/authors_internal.yaml
+++ b/_data/authors_internal.yaml
@@ -31,3 +31,23 @@ keonheehan:
   first_name: Keonhee
   last_name: Han
   website: https://keonhee-han.github.io
+ceciliacurreli:
+  first_name: Cecilia
+  last_name: Curreli
+  website:  https://ceveloper.github.io/
+abhisheksaroha:
+  first_name: Abhishek
+  last_name: Saroha
+  website: https://cvg.cit.tum.de/members/saroha
+zhenzhangye:
+  first_name: Zhenzhang
+  last_name: Ye
+  website: https://cvg.cit.tum.de/members/yez
+tarunyenamadra:
+  first_name: Tarun
+  last_name: Yenamandra
+  website: https://cvg.cit.tum.de/members/yenamandra
+mariiagladkova:
+  first_name: Mariia
+  last_name: Gladkova
+  website: https://cvg.cit.tum.de/members/gladkova
