--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ plugins:
 
 
 author:
-  name   : "Dominik Muhle"
+  name   : "Regine Hartwig"
   avatar : "/assets/images/profile-photo.jpg"
   bio    : >- 
     PhD student @ <a href="https://cvg.cit.tum.de">TUM CVG</a><br>
