--- a/_data/authors_internal.yaml
+++ b/_data/authors_internal.yaml
@@ -2,52 +2,16 @@ danielcremers:
   first_name: Daniel
   last_name: Cremers
   website: https://vision.in.tum.de/members/cremers
+reginehartwig:
+  first_name: Regine
+  last_name: Hartwig
+  website: https://cvg.cit.tum.de/members/hartwig
+  is_me: true
 dominikmuhle:
   first_name: Dominik
   last_name: Muhle
   website: https://dominikmuhle.github.io
-  is_me: true
-lukaskoestler:
-  first_name: Lukas
-  last_name: Koestler
-  website: https://lukaskoestler.com
-nikodemmel:
-  first_name: Nikolaus
-  last_name: Demmel
-  website: https://cvg.cit.tum.de/members/demmeln
-florianbernard:
-  first_name: Florian
-  last_name: Bernard
-  website: https://lovc.cs.uni-bonn.de/index.php/team/florian-bernard/
-felixwimbauer:
-  first_name: Felix
-  last_name: Wimbauer
-  website: https://cvg.cit.tum.de/members/wimbauer
-adrianhayler:
-  first_name: Adrian
-  last_name: Hayler
-  website: https://ahayler.github.io
-keonheehan:
-  first_name: Keonhee
-  last_name: Han
-  website: https://keonhee-han.github.io
-ceciliacurreli:
-  first_name: Cecilia
-  last_name: Curreli
-  website:  https://ceveloper.github.io/
-abhisheksaroha:
-  first_name: Abhishek
-  last_name: Saroha
-  website: https://cvg.cit.tum.de/members/saroha
-zhenzhangye:
-  first_name: Zhenzhang
-  last_name: Ye
-  website: https://cvg.cit.tum.de/members/yez
-tarunyenamadra:
-  first_name: Tarun
-  last_name: Yenamandra
-  website: https://cvg.cit.tum.de/members/yenamandra
-mariiagladkova:
-  first_name: Mariia
-  last_name: Gladkova
-  website: https://cvg.cit.tum.de/members/gladkova
+riccardomarin:
+  first_name: Riccardo
+  last_name: Marin
+  website: https://riccardomarin.github.io
