update picture and cv

--- a/_config.yml
+++ b/_config.yml
@@ -57,26 +57,23 @@ plugins:
 
 author:
   name   : "Regine Hartwig"
-  avatar : "/assets/images/profile-photo.jpg"
+  avatar : "/assets/images/profile-photo.png"
   bio    : >- 
     PhD student @ <a href="https://cvg.cit.tum.de">TUM CVG</a><br>
-    dominik.muhle@tum.de
+    regine.hartwig@tum.de
   links:
     - label: "CVG Page"
       icon: "fa-solid fa-fw fa-flask"
-      url: "https://cvg.cit.tum.de/members/muhled"
+      url: "https://cvg.cit.tum.de/members/hreg"
     - label: "LinkedIn"
       icon: "fa-brands fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/dominik-muhle-a6b487149/"
+      url: "https://www.linkedin.com/in/regine-hartwig-862469187/"
     - label: "Google Scholar"
       icon: "fa-brands fa-fw fa-google-scholar"
-      url: "https://scholar.google.com/citations?user=IyFJMlQAAAAJ&hl=en"
-    - label: "X (Twitter)"
-      icon: "fa-brands fa-fw fa-x-twitter"
-      url: "https://twitter.com/dominikmuhle"
+      url: "https://scholar.google.com/citations?user=vgMaj24AAAAJ&hl=de"
     - label: "GitHub"
       icon: "fa-brands fa-fw fa-github"
-      url: "https://github.com/dominikmuhle"
+      url: "https://github.com/reginehartwig"
 
 # ==================================================== COLLECTIONS ====================================================
 collections:
