--- a/_data/authors_internal.yaml
+++ b/_data/authors_internal.yaml
@@ -5,7 +5,7 @@ danielcremers:
 reginehartwig:
   first_name: Regine
   last_name: Hartwig
-  website: https://cvg.cit.tum.de/members/hartwig
+  website: https://reginehartwig.github.io
   is_me: true
 dominikmuhle:
   first_name: Dominik
