--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,9 @@
 - date: December 2024
-  description: 'New Website'
+  description: 'We start a project webpage for our new paper [Lightspeed Computation of Geometry-aware Semantic Embeddings](/publications/lightspeed/)'
+
+- date: June 2022
+  description: 'Our paper [Constrained Visual-Inertial Localization With Application And Benchmark in Laparoscopic Surgery](/publications/constrained/) has been published at ICRA 2022'
+
+- date: June 2022
+  description: 'Happy to start my PhD and join the team at Computer Vision Group at TUM under the supervision of Prof. Daniel Cremers'
+
