--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: December 2024
-  description: 'We start a project webpage for our new paper [Lightspeed Computation of Geometry-aware Semantic Embeddings](/publications/lightspeed/)'
+  description: 'We start a project webpage for our new paper [GECO: Geometrically consistent embedding with lightspeed inference](/publications/geco/)'
 
 - date: June 2022
   description: 'Our paper [Constrained Visual-Inertial Localization With Application And Benchmark in Laparoscopic Surgery](/publications/constrained/) has been published at ICRA 2022'
